fixed footer columns being off-center

--- a/wp-content/themes/floateasy/sass/partials/_footer.scss
+++ b/wp-content/themes/floateasy/sass/partials/_footer.scss
@@ -73,7 +73,6 @@
 	}
 	.footer-pagelinks-item{
 		display: inline-block;
-		padding-right: 20px;
 	}
 	.footer-pagelinks-item-link{
 		color: $offblack;
